Archive/801f83c1cbf71aed4de1f3a289370463-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp:18:14: error: expected initializer before ‘<’ token
     void Meow<TIterator, 1> ( TIterator arf, int c ) {
              ^
